fix(core): remove spacing from box-placeholder width

--- a/core/src/components/cat-checkbox/cat-checkbox.scss
+++ b/core/src/components/cat-checkbox/cat-checkbox.scss
@@ -47,7 +47,7 @@ input {
 }
 
 .box-placeholder {
-  width: calc($checkbox-width + 2px);
+  width: calc($checkbox-width);
   flex-shrink: 0;
 }
 
